# euler-rust

./: .gitignore  Cargo.toml  README.md
euler-001/: Cargo.toml
euler-001/src/: main.rs
euler-002/: Cargo.toml
euler-002/src/: main.rs
euler-003/: Cargo.toml
euler-003/src/: main.rs
euler-004/: Cargo.toml
euler-004/src/: main.rs
euler-005/: Cargo.toml
euler-005/src/: main.rs
euler-006/: Cargo.toml
euler-006/src/: main.rs
euler-007/: Cargo.toml
euler-007/src/: main.rs
euler-008/: Cargo.toml
euler-008/src/: main.rs
euler-009/: Cargo.toml
euler-009/src/: main.rs
euler-010/: Cargo.toml
euler-010/src/: main.rs
euler-011/: Cargo.toml
euler-011/src/: main.rs
euler-012/: Cargo.toml
euler-012/src/: main.rs
euler-013/: Cargo.toml
euler-013/src/: main.rs
euler-014/: Cargo.toml
euler-014/src/: main.rs
euler-015/: Cargo.toml
euler-015/src/: main.rs
euler-016/: Cargo.toml
euler-016/src/: main.rs
euler-017/: Cargo.toml
euler-017/src/: main.rs  say.rs
euler-018/: Cargo.toml
euler-018/src/: main.rs
euler-019/: Cargo.toml
euler-020/: Cargo.toml
euler-021/: Cargo.toml
euler-022/: Cargo.toml
euler-023/: Cargo.toml
euler-024/: Cargo.toml
euler-025/: Cargo.toml
euler-026/: Cargo.toml
euler-027/: Cargo.toml
euler-028/: Cargo.toml
euler-029/: Cargo.toml
euler-030/: Cargo.toml
euler-031/: Cargo.toml
euler-032/: Cargo.toml
euler-033/: Cargo.toml
euler-061/: Cargo.toml
euler-062/: Cargo.toml
euler-063/: Cargo.toml
euler-064/: Cargo.toml
euler-065/: Cargo.toml
src/: digits.rs  main.rs
(+60 files in other folders)
