[package]
name = "euler-005"
version = "0.1.0"
authors = ["Harrison McCullough <mccullough.harrison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiset = { git = "https://github.com/HarrisonMc555/multiset", branch = "implement-union-and-intersection" }
